--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,11 +1,12 @@
 html, body {
     margin: 0;
-    height: 100%;
     padding: 0;
+    height: 100%;
     box-sizing: border-box;
-    font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
+    font-family: 'Merriweather', serif;
+    color: #fff;
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1506695939086-156c2eff767b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');
     background-position: center;
     background-repeat: no-repeat;
@@ -21,25 +22,11 @@ html, body {
 
 .box {
     width: 100%;
-    max-width: 400px;
+    min-width: 400px;
 }
 
 .title {
     text-align: center;
-}
-
-.footer {
-    background-color: transparent;
-    padding: 1rem;
-}
-
-footer a {
-    color: inherit;
-}
-
-.footer p {
-    font-size: 0.5rem;
-    color: #fff;
 }
 
 .brand {
@@ -56,21 +43,22 @@ input[type=password] {
     font-size: 1.2rem;
     font-weight: bold;
     border-radius: 7px;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    -ms-border-radius: 7px;
-    -o-border-radius: 7px;
     background-color: #009EE2;
 }
 
 .button.is-fullwidth:hover {
-    background-color: #008fcc;
     color: #000;
-
+    background-color: #008fcc;
 }
 
 @media screen and (max-width: 768px) {
     .title {
         font-size: 2rem;
     }
+
+    .box {
+        width: 90%;
+        max-width: 755px;
+    }
+
 }
