--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,31 +6,53 @@ html, body {
     font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    overflow: hidden;
-
-}
-
-.page-wrapper {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.hero {
-
-    height: 100vh;
-}
-
-.hero-custom {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1506695939086-156c2eff767b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');
-    /* Add a dark overlay to the background image */
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
     color: #fff;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+}
 
+.navbar-link {
+    font-size: 1rem;
+    font-weight: 400;
+    padding-left: 10px;
+}
+
+#flashcard-btn {
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    -webkit-border-radius: 15px;
+    background-color: #009EE2;
+    border-radius: 15px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    height: 35px;
+    margin-left: 10px;
+}
+
+.navbar-start a {
+    font-size: 0.7rem;
+    font-weight: 400;
+    padding-left: 10px;
+}
+
+.navbar-item {
+    font-size: 1rem;
+    font-weight: bold;
+
+}
+
+.navbar-item ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.navbar-item li a {
+    font-size: 1rem;
+    font-weight: 400;
+    padding-left: 10px;
 }
 
 .divider {
@@ -39,57 +61,16 @@ html, body {
 }
 
 .bold {
-    font-weight: 900;
     color: #fff;
-}
-
-.legal {
-    margin-top: 10px;
-    font-size: 0.3rem;
+    font-weight: 900;
 }
 
 .legal-container {
-    width: 90%;
+    width: 80%;
 }
 
-.navbar-link {
-    padding-left: 10px;
-    font-size: 0.7rem;
-    font-weight: 400;
-}
+.legal {
+    font-size: 0.5rem;
+    margin-top: 10px;
 
-.navbar-start a {
-    padding-left: 10px;
-    font-size: 0.7rem;
-    font-weight: 400;
-}
-
-.navbar-item {
-    font-weight: bold;
-    font-size: 0.4rem;
-
-}
-
-.navbar-item ul {
-    padding: 0;
-    list-style-type: none;
-}
-
-.navbar-item li a {
-    padding-left: 10px;
-    font-size: 0.7rem;
-    font-weight: 400;
-}
-
-#flashcard-btn {
-    font-size: 1.2rem;
-    font-weight: bold;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
-    background-color: #009EE2;
-    margin-left: 10px;
-    height: 35px;
 }
