--- a/views/view-notes.ejs
+++ b/views/view-notes.ejs
@@ -1,4 +1,3 @@
-<!-- <div class="container"> -->
 <h1 class="title has-text-centered">All Notes</h1>
 <% if (notes.length === 0) { %>
 <p class="subtitle has-text-centered">No notes found</p>
@@ -7,6 +6,17 @@
   <% notes.forEach(note => { %>
   <div class="column is-one-quarter-desktop is-half-tablet is-full-mobile">
     <div class="card">
+      <!-- Edit form -->
+      <form
+        action="/notes/edit/<%= note._id %>"
+        method="GET"
+        style="position: absolute; bottom: 0.5rem; left: 0.5rem"
+      >
+        <button class="edit-button" type="submit">
+          <i class="fa-regular fa-edit"></i>
+        </button>
+      </form>
+      <!-- Delete form -->
       <form
         action="/notes/delete/<%= note._id %>"
         method="POST"
