--- a/public/css/login.css
+++ b/public/css/login.css
@@ -18,11 +18,15 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 15px;
+    box-sizing: border-box;
 }
 
 .box {
     width: 100%;
-    min-width: 400px;
+    max-width: 700px;
+    padding: 15px;
+    box-sizing: border-box;
 }
 
 .title {
@@ -57,8 +61,8 @@ input[type=password] {
     }
 
     .box {
-        width: 90%;
-        max-width: 755px;
+        padding: 10px;
+
     }
 
 }
