--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -22,43 +22,43 @@
             </div>
           </div>
         </div>
+
         <div class="box">
           <div class="columns">
-            <div class="column">
-              <div class="has-text-centered">
-                <label class="custom-checkbox" for="showAnswersCheckbox">
-                  <input
-                    type="checkbox"
-                    id="showAnswersCheckbox"
-                    class="hidden-checkbox"
-                  />
-                  <span class="styled-checkbox"></span>
-                  Show Answers
-                </label>
-              </div>
-              <div class="column">
-                <!-- <label class="custom-checkbox" for="randomizeCheckbox">
-              <input
-                type="checkbox"
-                id="randomizeCheckbox"
-                class="hidden-checkbox"
-              />
-              <span class="styled-checkbox"></span>
-              Randomize
-            </label> -->
+            <div class="column is-half">
+              <!-- <div class="has-text-centered"> -->
+              <label class="custom-checkbox" for="showAnswersCheckbox">
+                <input
+                  type="checkbox"
+                  id="showAnswersCheckbox"
+                  class="hidden-checkbox"
+                />
+                <span class="styled-checkbox"></span>
+                Show Answers
+              </label>
+            </div>
+            <div class="column is-half">
+              <label class="custom-checkbox" for="randomizeCheckbox">
+                <input
+                  type="checkbox"
+                  id="randomizeCheckbox"
+                  class="hidden-checkbox"
+                />
+                <span class="styled-checkbox"></span>
+                Randomize
+              </label>
 
-                <div class="content">
-                  <p id="category" class="subtitle is-6"></p>
-                </div>
+              <div class="content">
+                <p id="category" class="subtitle is-6"></p>
               </div>
             </div>
+          </div>
 
-            <!-- <div class="progress-container" id="progress-container">
+          <!-- <div class="progress-container" id="progress-container">
               <span class="progress-percentage progress-start">0%</span>
               <div id="progress-bar" class="progress-bar"></div>
               <span class="progress-percentage progress-end">100%</span>
             </div> -->
-          </div>
         </div>
 
         <div class="card">
@@ -93,12 +93,12 @@
 
           <div class="button-container">
             <div class="columns">
-              <div class="column is-half is-half-mobile">
+              <div class="column is-half">
                 <button id="submit-rating" class="button is-rounded">
-                  Submit Rating
+                  Rate
                 </button>
               </div>
-              <div class="column is-half is-half-mobile">
+              <div class="column is-half">
                 <button id="flag-for-review" class="button is-rounded">
                   Flag
                 </button>
