added more flows

--- a/views/flows.ejs
+++ b/views/flows.ejs
@@ -384,6 +384,271 @@
           <h5 class="list-item">
             PFD <span class="right-side">NO FLAGS</span>
           </h5>
+          <h5 class="list-item">MFD<span class="right-side">SET</span></h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              Hydraulic Synoptic Page<span class="right-side">Check</span>
+            </li>
+          </ul>
+          <ul class="item-list">
+            <p class="small-note">
+              Verify hydraulic fluid temp, qty, and pressure by turning HYD SYS
+              1, 2, & 3A ON.
+            </p>
+            <p class="small-note">
+              Perform Hydraulic warm-up when reservoir temperature is below -18c
+            </p>
+            <p class="small-note">Perform H-PBIT when required.</p>
+          </ul>
+          <ul class="item-list">
+            <li class="item-to-check">
+              Status Page<span class="right-side">Check</span>
+            </li>
+          </ul>
+          <ul class="item-list">
+            <p class="small-note">Verify:</p>
+            <li class="item-to-check">Hydraulic brake accumulator pressure</li>
+            <li class="item-to-check">Oil quantities</li>
+            <li class="item-to-check">
+              Oxygen pressure: Green for 3, cyan for 2, amber for servicing
+            </li>
+            <li class="item-to-check">
+              MFD OPTIONS<span class="right-side">SET</span>
+            </li>
+          </ul>
+
+          <h5 class="list-item">
+            IESS<span class="right-side">CHECKED AND SET</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              Attitude<span class="right-side">COMPARE WITH PFD</span>
+            </li>
+            <li class="item-to-check">
+              Altimeter<span class="right-side">SET, IF KNOWN</span>
+            </li>
+            <li class="item-to-check">
+              ALT or SPD Flags<span class="right-side">NONE DISPLAYED</span>
+            </li>
+            <li class="item-to-check">VSI<span class="right-side">0</span></li>
+          </ul>
+          <h5 class="list-item">
+            Autobrake<span class="right-side">OFF</span>
+          </h5>
+          <h5 class="list-item">
+            GRD PROX TERR INHIB<span class="right-side">OUT</span>
+          </h5>
+          <h5 class="list-item">
+            EMERG / PRKG BRAKE LIGHT<span class="right-side">CHECKED</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              ON light indicates brakes are applied.
+            </li>
+          </ul>
+          <h5 class="list-item">
+            EICAS<span class="right-side">CHECKED</span>
+          </h5>
+          <li class="item-to-check">
+            Verify all displayed EICAS messages are normal for the current
+            operational aircraft config.
+          </li>
+          <h5 class="list-item">Clock<span class="right-side">Set</span></h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              GPS/INT/SET Selector<span class="right-side">GPS</span>
+            </li>
+            <li class="item-to-check">
+              If dashes displayed - GPS/INT/SET Selector<span class="right-side"
+                >SET</span
+              >
+            </li>
+            <li class="item-to-check">
+              Enter the correct time - GPS/INT/SET Selector<span
+                class="right-side"
+                >INT</span
+              >
+            </li>
+          </ul>
+          <h5 class="list-item">
+            Landing gear lever<span class="right-side">DOWN</span>
+          </h5>
+          <h5 class="list-item">ELT<span class="right-side">ARM</span></h5>
+          <h5 class="list-item">
+            GRD PROX G/S INHIB<span class="right-side">OUT</span>
+          </h5>
+          <h5 class="list-item">
+            LG WARN INHIB<span class="right-side">GUARDED</span>
+          </h5>
+          <h5 class="list-item">
+            FLIGHT CONTROLS MODE<span class="right-side">CHECKED</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              ELEVATORS<span class="right-side">GUARDED</span>
+            </li>
+            <li class="item-to-check">
+              RUDDERS<span class="right-side">GUARDED</span>
+            </li>
+            <li class="item-to-check">
+              SPOILERS<span class="right-side">GUARDED</span>
+            </li>
+          </ul>
+          <h5 class="list-item">
+            STALL WARNING<span class="right-side">CHECKED</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              SHAKER 1 CUTOUT<span class="right-side">OUT</span>
+            </li>
+            <li class="item-to-check">
+              SHAKER 2 CUTOUT<span class="right-side">OUT</span>
+            </li>
+          </ul>
+          <h5 class="list-item">
+            POWERPLANT<span class="right-side">CHECKED</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              START/STOP 1 SELECTOR
+              <span class="right-side">GUARDED/STOP</span>
+            </li>
+            <li class="item-to-check">
+              START/STOP 2 SELECTOR
+              <span class="right-side">GUARDED/STOP</span>
+            </li>
+            <li class="item-to-check">
+              IGNITION 1 SELECTOR
+              <span class="right-side">AUTO</span>
+            </li>
+            <li class="item-to-check">
+              IGNITION 2 SELECTOR
+              <span class="right-side">AUTO</span>
+            </li>
+          </ul>
+          <h5 class="list-item">
+            EICAS FULL<span class="right-side">OUT</span>
+          </h5>
+          <h5 class="list-item">
+            Speed Brake Lever<span class="right-side">CLOSE</span>
+          </h5>
+          <h5 class="list-item">
+            Thrust Levers<span class="right-side">IDLE</span>
+          </h5>
+          <h5 class="list-item">
+            RAT MANUAL DEPLOY Handle<span class="right-side">STOWED</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              Cover<span class="right-side">FLUSH</span>
+            </li>
+          </ul>
+          <h5 class="list-item">
+            PARKING BRAKE HANDLE<span class="right-side">ON or OFF</span>
+          </h5>
+          <h5 class="list-item">
+            O2 Mask, Reg, and Audio Panel<span class="right-side">CHECKED</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              MIC Button<span class="right-side">Push In (AUTO)</span>
+            </li>
+            <li class="item-to-check">
+              SPKR<span class="right-side">OFF</span>
+            </li>
+            <li class="item-to-check">
+              Reg Control Knob<span class="right-side">100%</span>
+            </li>
+            <li class="item-to-check">
+              TEST/RESET Button<span class="right-side">PRESS AND HOLD</span>
+            </li>
+            <ul class="item-list">
+              <li class="item-to-check">
+                -Verify a short illumination or "blink" of the flow indicator
+              </li>
+              <li class="item-to-check">
+                -Verify audible oxygen flow in the headset or loudspeakers
+              </li>
+              <li class="item-to-check">
+                -Once the mask fully pressurizes the indicator must go out,
+                showing the sys is leak free.
+              </li>
+              <li class="item-to-check">-Release the TEST/RESET button</li>
+            </ul>
+          </ul>
+          <h5 class="list-item">
+            GRD PROX FLAP OVRD<span class="right-side">Guarded</span>
+          </h5>
+          <h5 class="list-item">
+            SLAT/FLAP LEVER<span class="right-side">0</span>
+          </h5>
+          <h5 class="list-item">TRIM<span class="right-side">CHECKED</span></h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              SYS 1 CUTOUT<span class="right-side">GUARDED</span>
+            </li>
+            <li class="item-to-check">
+              SYS 2 CUTOUT<span class="right-side">GUARDED</span>
+            </li>
+            <li class="item-to-check">
+              Verify roll, yaw, and pitch (CA, FO, backup) trims are operating
+              properly both directions. Verify system's 3-second protection is
+              working properly. Adjust yaw and roll trim to the neutral position
+              and pitch trim to the green band.
+            </li>
+            <li class="item-to-check">
+              <span style="color: rgb(136, 136, 13); font-size: 1.2rem"
+                >&#9888;</span
+              >
+              <u>CAUTION:</u>When only one half of the trim switch is
+              erroneously actuated for more than seven seconds, that switch is
+              automatically deactivated, an aural warning "TRIM" is activated
+              for six seconds and an advisory message on the EICAS is observed
+              requiring mx action to clear.
+            </li>
+          </ul>
+          <h5 class="list-item">
+            PA BUTTON<span class="right-side">CHECKED</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              Verify functionality of the PA system.
+            </li>
+          </ul>
+          <h5 class="list-item">
+            ELEVATOR DISCONNECT<span class="right-side">IN and NO EICAS</span>
+          </h5>
+          <h5 class="list-item">
+            AILERON DISCONNECT<span class="right-side">IN and NO EICAS</span>
+          </h5>
+          <h5 class="list-item">
+            COCKPIT DOOR CONTROL<span class="right-side">CHECKED</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              LOCK<span class="right-side">GUARDED</span>
+            </li>
+            <ul class="item-list">
+              <li class="item-to-check">-Close the flight deck door</li>
+              <li class="item-to-check">-Press and hold the TEST button</li>
+              <li class="item-to-check">
+                -Check the alarm and UNLOCKED indication ON
+              </li>
+              <li class="item-to-check">
+                -Push in the LOCK button and check electromechanical latch
+                normal ops
+              </li>
+              <li class="item-to-check">
+                -Press the EMERG ENTRY pushbutton on the door control panel in
+                the passenger cabin. Check the UNLOCKED indication is flashing
+                and check normal operation of the alarm sequence according to
+                the system logic.
+              </li>
+              <li class="item-to-check">-Push out the LOCK button</li>
+            </ul>
+          </ul>
+          <h5 class="list-item">Alarm Sequence</h5>
+          <p class="small-note"></p>
         </article>
       </div>
       <div class="column is-full-mobile is-half-tablet is-one-quarter-desktop">
