--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -40,16 +40,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/bulma/css/bulma.css" />
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    /> -->
 
     <% if (customCSS) { %>
     <link rel="stylesheet" href="/css/<%= customCSS %>" />
     <% } %>
+    <link rel="stylesheet" href="/css/navbar.css" />
     <script
       src="https://kit.fontawesome.com/082eaaba14.js"
       crossorigin="anonymous"
@@ -67,27 +62,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/js/select2.min.js"></script>
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script> -->
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
-    <style>
-      .navbar-item h3 {
-        font-weight: bold;
-        font-size: larger;
-        /* text-align: center; */
-      }
-      .navbar-item ul {
-        padding: 0;
-        list-style-type: none;
-      }
-      .navbar-item li {
-        padding-left: 10px;
-      }
-    </style>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
   </head>
   <header><%- include('./partials/header') %></header>
   <body>
