--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,6 +1,9 @@
-<h1>Access Denied</h1>
-<p>You do not have permission to access this page.</p>
-<p>
-  Only administrators are allowed to access this page. If you believe this is an
-  error, please contact the site administrator.
-</p>
+<div class="error-wrapper">
+  <div class="error-container">
+    <h1>Something went wrong</h1>
+    <p><%= error.message || 'An unexpected error has occurred.' %></p>
+    <div class="button-container">
+      <a href="/" id="homepage-btn">Go to Homepage</a>
+    </div>
+  </div>
+</div>
