--- a/views/fuel.ejs
+++ b/views/fuel.ejs
@@ -1,6 +1,8 @@
 <section class="section">
   <div class="container">
     <h1 class="title">Fuel Planning</h1>
+    <button class="button" id="regenerateBtn">Regenerate Scenario</button>
+
     <table class="table is-bordered is-striped is-hoverable">
       <tbody>
         <tr>
@@ -44,26 +46,26 @@
           <tr>
             <td>Time to destination:</td>
             <td>
-              <span id="timeToDestination" class="highlight"></span> hours.
+              <span id="timeToDestination" class="highlight"></span>
             </td>
           </tr>
           <tr>
             <td>Fuel to destination:</td>
             <td>
-              <span id="fuelToDestination" class="highlight"></span> pounds.
+              <span id="fuelToDestination" class="highlight"></span> pounds
             </td>
           </tr>
           <tr>
             <td>Total Fuel:</td>
-            <td><span id="totalFuel" class="highlight"></span> pounds.</td>
+            <td><span id="totalFuel" class="highlight"></span> pounds</td>
           </tr>
           <tr>
             <td>Holding Fuel:</td>
-            <td><span id="holdingFuel" class="highlight"></span> lbs</td>
+            <td><span id="holdingFuel" class="highlight"></span> pounds</td>
           </tr>
           <tr>
             <td>Holding Time:</td>
-            <td><span id="holdingTime" class="highlight"></span> hours</td>
+            <td><span id="holdingTime" class="highlight"></span></td>
           </tr>
         </tbody>
       </table>
