--- a/public/css/fuel.css
+++ b/public/css/fuel.css
@@ -1,3 +1,27 @@
+html, body {
+    margin: 0;
+    height: 100%;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Merriweather', serif;
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1570710891163-6d3b5c47248b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+    background-position: 30% center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
+}
+
+.title {
+    color: #fff;
+}
+
+.subtitle {
+    font-size: 1.7rem;
+    color: #fff;
+}
+
 .is-hidden {
     display: none;
 }
@@ -14,11 +38,24 @@
     color: #000;
     font-size: 1.3rem;
     font-weight: 700;
+    border: 1px solid gray;
+    border-radius: 7px;
+
+
 }
 
-.subtitle {
-    font-size: 1.7rem;
+#regenerateBtn {
+    background-color: #009EE2;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #000;
+    font-size: 1.3rem;
+    font-weight: 700;
+    border: 1px solid gray;
+    border-radius: 7px;
+
 }
+
 
 .container p {
     font-size: 1.3rem;
