--- a/public/css/new-note.css
+++ b/public/css/new-note.css
@@ -1,13 +1,16 @@
-body, html {
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1506695939086-156c2eff767b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80') center/cover no-repeat;
+html, body {
+    margin: 0;
+    height: 100%;
+    padding: 0;
     box-sizing: border-box;
-    /* color: #fff; */
+    font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
-    font-family: 'Merriweather', serif;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1570710891163-6d3b5c47248b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+    background-position: 30% center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
 }
 
 .column {
